# AI-Co-scientist

./: .env.example  .gitignore  AS-ALD_CoScientist_Project.pptx  Dockerfile  Makefile  README.md  app.py  environment.yml  pyproject.toml  requirements.txt  selection_criteria.md
artifacts/: checkpoints.sqlite
artifacts/demo/: asald_results.json  citation_repository.json  confidence_scores.json  hypothesis_state_graphs.json  knowledge_graph.graphml  knowledge_graph.json  knowledge_graph_metadata.json  layer1_output.json  layer3_output.json  official_hypothesis.json  research_provenance.json  surface_fidelity.json  validation_plan.json  validation_provenance.json  validation_results.json
artifacts/demo/simulation_logs/: surface_reactivity_iter0.json
data/: drugbank_mini.csv
src/ai_coscientist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aicoscientist/: __init__.py  asald.py  cli.py  cli_paper.py  cli_validate.py  config.py  graph.py  knowledge_graph.py  layer1_graph.py  layer2_graph.py  layer3_graph.py  llm.py  models.py  persistence.py  surface_mining.py
src/aicoscientist/agents/: __init__.py  hypothesis_agent.py  inhibitor_proposer.py  orchestrator.py  research_agent.py  schemas.py
src/aicoscientist/layer4_paper/: __init__.py  compiler.py  figures.py  sections.py  stitcher.py  swarm.py  template.tex
src/aicoscientist/sources/: __init__.py  aggregator.py  arxiv.py  base.py  crossref.py  mock.py  openalex.py  pubmed.py  seed_asald.py  semantic_scholar.py
src/aicoscientist/surfaces/: __init__.py  amorphous_builder.py  (+5 more)
(+20 files in other folders)
